# Voxploria

./: CMakeLists.txt  build.sh
assets/shaders/: tile.frag  tile.frag.spv  tile.vert  tile.vert.spv
include/: Game.hpp  Player.hpp  VulkanRenderer.h  VulkanRenderer.hpp  Window.h  World.hpp
src/: Game.cpp  Main.cpp  Player.cpp  VulkanRenderer.cpp  Window.cpp  World.cpp  main.cpp
